# neuropharm-sim-lab

./: .gitignore  AGENTS.md  Dockerfile  README.md  index.html  render.yaml  wrangler.toml
backend/: config.py  main.py  openapi.json  pyproject.toml  quickstart.py  refs.json  requirements-optional.txt  requirements.txt  telemetry.py
backend/api/: __init__.py  routes.py  schemas.py
backend/atlas/: __init__.py  qa.py
backend/engine/: __init__.py  receptors.py  simulator.py
backend/graph/: __init__.py  bel.py  cli.py  entity_grounding.py  evidence_classifier.py  evidence_quality.py  gap_state.py  gaps.py  governance.py  ingest_atlases.py  ingest_base.py  ingest_chembl.py  ingest_indra.py  ingest_openalex.py  ingest_pdsp.py  ingest_runner.py  ingest_semantic_scholar.py  literature.py  models.py  persistence.py  pipeline.py  service.py  text_mining.py  vector_store.py
backend/reasoning/: __init__.py  causal.py
backend/simulation/: __init__.py  _integration.py  circuit.py  engine.py  kg_adapter.py  molecular.py  pkpd.py
backend/tests/: conftest.py  test_api_assistant_gateway.py  test_api_integration.py  test_api_routes.py  test_atlas_geometry.py  test_atlas_overlays.py  test_causal_estimator.py  test_config.py  test_evidence_quality.py  test_gap_analysis.py  test_graph_models.py  test_graph_persistent_backends.py  test_graph_service.py  test_ingest_runner.py  test_ingestion.py  test_ingestion_pipeline.py  test_kg_adapter.py  test_literature_aggregator.py  test_main_simulation.py  test_pdsp_ingestion.py  test_quickstart.py  test_semantic_scholar_ingestion.py  (+5 more)
(+120 files in other folders)
