[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuropharm-sim-backend"
version = "0.1.0"
description = "Simulation services for the Neuropharm laboratory stack"
requires-python = ">=3.10"
authors = [{ name = "Neuropharm Sim Lab" }]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "numpy>=1.22.0",
    "scipy>=1.8.0",
    "pydantic>=2.1.1",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "neo4j>=5.13,<6.0",
    "python-arango>=7.5,<8.0",
]

[project.optional-dependencies]
mechanistic = [
    "pysb>=1.13.0",
    "ospsuite>=11.0.0",
    "tvb-library>=2.8.0",
]
# Causal inference helpers used by the knowledge-graph endpoints.
causal = [
    "dowhy>=0.11.1",
    "econml>=0.14.1",
]
# Lightweight NLP extras used by the OpenAlex text-mining pipeline.
text-mining = [
    "spacy>=3.7.4,<3.8.0",
    "scispacy>=0.5.4",
]
# Backwards compatibility with older installation instructions.
simulation = [
    "pysb>=1.13.0",
    "ospsuite>=11.0.0",
    "tvb-library>=2.8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.setuptools.package-data]
"backend.simulation.assets" = ["*.json"]
